Fixing build and release

--- a/src/dev/resources/some-game.html
+++ b/src/dev/resources/some-game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>[DEV] Some game</title>
+    <title>[DEV] Snake game</title>
     <link rel="stylesheet" type="text/css" href="../../main/resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="../../main/resources/css/fullscreen.css">
     <link rel="stylesheet" type="text/css" href="../../main/resources/css/helper.css">
