--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Some game</title>
+    <title>Snake game</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/fullscreen.css">
     <link rel="stylesheet" type="text/css" href="css/helper.css">
@@ -17,7 +17,7 @@
 <body>
 
 <div id="title">
-    <h1>Some game</h1>
+    <h1>Snake game</h1>
 </div>
 
 <div id="main">
